components/Card/Card.module.scss
.card {
    display: flex;
    flex-direction: column;
    border-radius: 8px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15), 0 1px 3px rgba(0, 0, 0, 0.1);
    transition: box-shadow 0.2s;
    background: white;
    text-decoration: none;
    padding: 0;
    margin: 0;
    position: relative;
    overflow: hidden;
    color: var(--neutral-800);

    &[data-disabled="false"] {
        cursor: pointer;
    }

    &[data-disabled="true"] {
        cursor: not-allowed;
    }

    &:hover {
        box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15), 0 1px 6px rgba(0, 0, 0, 0.2);
    }

    &[data-completed="true"] > :last-child {
        z-index: 2;
    }

    &[data-completed="true"] .image-container:after {
        content: "";
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: rgb(33 36 40 / 80%);
        position: absolute;
        z-index: 11;
    }
}

.image-container {
    display: grid;
    grid-template-areas: "image";
    position: relative;
    z-index: 1;

    &:hover .hover-image {
        visibility: visible;
        opacity: 1;
    }

    &:not(:hover) .hover-image {
        visibility: hidden;
    }
}

.hover-image {
    grid-area: image;
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.2s;
    display: flex;

    > * {
        width: 100%;
        max-height: 350px;
    }
}

.display-image {
    grid-area: image;
    display: flex;

    > * {
        width: 100%;
        max-height: 350px;
    }
}

.metadata-container {
    display: flex;
    flex-direction: column;
    padding: 1.5rem 1rem 2rem;
}

.card-title {
    text-transform: uppercase;
    font-size: 1.25rem;
    text-align: center;
}

.card-description {
    font-size: 1rem;
    color: var(--neutral-600);
    letter-spacing: 0.3px;
    margin-top: 0.25rem;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgb(33 36 40 / 80%);
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    font-size: 1.25rem;
    letter-spacing: 0.3px;
    text-align: center;
    padding: 0 2rem;
    pointer-events: all;

    &:hover .overlay-text {
        visibility: visible;
        opacity: 1;
    }

    &:hover .overlay-lock {
        visibility: hidden;
    }
}

.overlay-text {
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.2s;
    transition-delay: 0.3s;
}

.overlay-lock {
    width: 100%;
    position: absolute;

    > svg {
        height: 4rem;
    }
}

